// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nightwatch Project > v2 nested should set right path names in \`nightwatch.config.ts\` 1`] = `
"// Refer to the online docs for more details:
// https://nightwatchjs.org/gettingstarted/configuration/
//

//  _   _  _         _      _                     _          _
// | \\\\ | |(_)       | |    | |                   | |        | |
// |  \\\\| | _   __ _ | |__  | |_ __      __  __ _ | |_   ___ | |__
// | . \` || | / _\` || '_ \\\\ | __|\\\\ \\\\ /\\\\ / / / _\` || __| / __|| '_ \\\\
// | |\\\\  || || (_| || | | || |_  \\\\ V  V / | (_| || |_ | (__ | | | |
// \\\\_| \\\\_/|_| \\\\__, ||_| |_| \\\\__|  \\\\_/\\\\_/   \\\\__,_| \\\\__| \\\\___||_| |_|
//             __/ |
//            |___/

module.exports = {
  // An array of folders (excluding subfolders) where your tests are located;
  // if this is not specified, the test source must be passed as the second argument to the test runner.
  src_folders: ['tests', 'nightwatch/examples'],

  // See https://nightwatchjs.org/guide/concepts/page-object-model.html
  page_objects_path: ['nightwatch/page-objects'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-custom-commands.html
  custom_commands_path: ['nightwatch/custom-commands'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-custom-assertions.html
  custom_assertions_path: ['nightwatch/custom-assertions'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-plugins.html
  plugins: ['@nightwatch/react'],

  // See https://nightwatchjs.org/guide/concepts/test-globals.html
  globals_path: 'tests/globals.js',

  webdriver: {},

  test_workers: {
    enabled: true
  },

  test_settings: {
    default: {
      disable_error_log: false,
      launch_url: 'http://localhost',

      screenshots: {
        enabled: false,
        path: 'screens',
        on_failure: true
      },

      desiredCapabilities: {
        browserName: 'firefox'
      },

      \\"safari_ios\\":{
        desiredCapabilities: {
          browserName: 'safari',
          platformName: 'ios',
          'safari:useSimulator': true,
          // change the deviceName, platformVersion accordingly to run tests on (necessary)
          // Run command: \`xcrun simctl list devices\`
          UDID: 'C842E867-5906-4326-ADFA-83D06BA488BF',
          'platformVersion': '16.0',
        }
      },

      \\"firefox_android\\": {
        desiredCapabilities: {
          browserName: 'firefox',
          acceptInsecureCerts: true,
          'moz:firefoxOptions': {
            args: [
              // '-headless',
              // '-verbose'
            ],
            androidPackage: \\"org.mozilla.firefox\\",
          }
        }
      },

      webdriver: {
        start_process: true,
        server_path: ''
      },

    },

    firefox: {
      desiredCapabilities: {
        browserName: 'firefox',
        acceptInsecureCerts: true,
        'moz:firefoxOptions': {
          args: [
            // '-headless',
            // '-verbose'
          ],
          androidPackage: \\"org.mozilla.firefox\\",
        }

      },
      webdriver: {
        start_process: true,
        server_path: '',
        cli_args: [
          // very verbose geckodriver logs
          // '-vv'
        ]
      }
    },

  },

  usage_analytics: {
    enabled: false,
    log_path: './logs/analytics',
    client_id: 'f9eed027-3a2d-4157-8cb5-d591acdc0095'
  }
};
"
`;

exports[`nightwatch Project > v2 nested should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "nightwatch",
      "node",
    ],
  },
  "extends": "../../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "cypress.config.ts",
  ],
}
`;

exports[`nightwatch Project > v2 should add update \`workspace.json\` file properly when eslint is passed 1`] = `
Object {
  "builder": "@nrwl/linter:eslint",
  "options": Object {
    "lintFilePatterns": Array [
      "apps/my-app-e2e/**/*.{js,ts}",
    ],
  },
  "outputs": Array [
    "{options.outputFile}",
  ],
}
`;

exports[`nightwatch Project > v2 should set right path names in \`nightwatch.config.ts\` 1`] = `null`;

exports[`nightwatch Project > v2 should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "nightwatch",
      "node",
    ],
  },
  "extends": "../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "cypress.config.ts",
  ],
}
`;
